Dependencies/zlib-1.2.8/configure.log
--------------------
./configure --64 --prefix=/Users/tjcorona/Development/Software/Albany/install
Thu Mar 10 16:45:31 EST 2016
=== ztest14884.c ===
extern int getchar();
int hello() {return getchar();}
===
mpicc -c ztest14884.c
... using mpicc

Checking for obsessive-compulsive compiler options...
=== ztest14884.c ===
int foo() { return 0; }
===
mpicc -c -O3 ztest14884.c

Checking for shared library support...
=== ztest14884.c ===
extern int getchar();
int hello() {return getchar();}
===
mpicc -w -c -O3 ztest14884.c
cc -shared -O3 -o ztest14884.so ztest14884.o
Building shared library libz.so.1.2.8 with mpicc.

=== ztest14884.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
mpicc -c -O3 -D_LARGEFILE64_SOURCE=1 ztest14884.c
ztest14884.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/sys/_types/_off_t.h:30:25: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest14884.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
mpicc -O3 -o ztest14884 ztest14884.c
Checking for fseeko... Yes.

=== ztest14884.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
mpicc -O3 -o ztest14884 ztest14884.c
Checking for strerror... Yes.

=== ztest14884.c ===
#include <unistd.h>
int main() { return 0; }
===
mpicc -c -O3 ztest14884.c
Checking for unistd.h... Yes.

=== ztest14884.c ===
#include <stdarg.h>
int main() { return 0; }
===
mpicc -c -O3 ztest14884.c
Checking for stdarg.h... Yes.

=== ztest14884.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
mpicc -c -O3 ztest14884.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest14884.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
mpicc -O3 -o ztest14884 ztest14884.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest14884.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
mpicc -c -O3 ztest14884.c
Checking for return value of vsnprintf()... Yes.

ALL = static shared
AR = ar
ARFLAGS = rc
CC = mpicc
CFLAGS = -O3
CPP = mpicc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = cc -shared
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -O3
SHAREDLIB = libz.so
SHAREDLIBM = libz.so.1
SHAREDLIBV = libz.so.1.2.8
STATICLIB = libz.a
TEST = all teststatic testshared
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /Users/tjcorona/Development/Software/Albany/install
sharedlibdir = ${libdir}
uname = Darwin 15.3.0
--------------------


--------------------
./configure —64 —prefix=/Users/tjcorona/Development/Software/Albany/install
Mon Nov 14 09:31:22 EST 2016
unknown option: —64
./configure --help for help
** ./configure aborting.
--------------------


--------------------
./configure —prefix=/Users/tjcorona/Development/Software/Albany/install
Mon Nov 14 09:31:32 EST 2016
unknown option: —prefix=/Users/tjcorona/Development/Software/Albany/install
./configure --help for help
** ./configure aborting.
--------------------


--------------------
./configure --64 -—prefix=/Users/tjcorona/Development/Software/Albany/install
Mon Nov 14 09:31:48 EST 2016
unknown option: -—prefix=/Users/tjcorona/Development/Software/Albany/install
./configure --help for help
** ./configure aborting.
--------------------


--------------------
./configure --help
Mon Nov 14 09:31:57 EST 2016
usage:
  configure [--const] [--zprefix] [--prefix=PREFIX]  [--eprefix=EXPREFIX]
    [--static] [--64] [--libdir=LIBDIR] [--sharedlibdir=LIBDIR]
    [--includedir=INCLUDEDIR] [--archs="-arch i386 -arch x86_64"]
--------------------
./configure --64 --prefix=/Users/tjcorona/Development/Software/Albany/install
Mon Nov 14 09:32:16 EST 2016
=== ztest65676.c ===
extern int getchar();
int hello() {return getchar();}
===
../../install/bin/mpicc -c ztest65676.c
... using ../../install/bin/mpicc

Checking for obsessive-compulsive compiler options...
=== ztest65676.c ===
int foo() { return 0; }
===
../../install/bin/mpicc -c -O3 ztest65676.c

Checking for shared library support...
=== ztest65676.c ===
extern int getchar();
int hello() {return getchar();}
===
../../install/bin/mpicc -w -c -O3 ztest65676.c
cc -shared -O3 -o ztest65676.so ztest65676.o
Building shared library libz.so.1.2.8 with ../../install/bin/mpicc.

=== ztest65676.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
../../install/bin/mpicc -c -O3 -D_LARGEFILE64_SOURCE=1 ztest65676.c
ztest65676.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/usr/include/sys/_types/_off_t.h:30:25: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest65676.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
../../install/bin/mpicc -O3 -o ztest65676 ztest65676.c
Checking for fseeko... Yes.

=== ztest65676.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
../../install/bin/mpicc -O3 -o ztest65676 ztest65676.c
Checking for strerror... Yes.

=== ztest65676.c ===
#include <unistd.h>
int main() { return 0; }
===
../../install/bin/mpicc -c -O3 ztest65676.c
Checking for unistd.h... Yes.

=== ztest65676.c ===
#include <stdarg.h>
int main() { return 0; }
===
../../install/bin/mpicc -c -O3 ztest65676.c
Checking for stdarg.h... Yes.

=== ztest65676.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
../../install/bin/mpicc -c -O3 ztest65676.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest65676.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
../../install/bin/mpicc -O3 -o ztest65676 ztest65676.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest65676.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
../../install/bin/mpicc -c -O3 ztest65676.c
Checking for return value of vsnprintf()... Yes.

ALL = static shared
AR = ar
ARFLAGS = rc
CC = ../../install/bin/mpicc
CFLAGS = -O3
CPP = ../../install/bin/mpicc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = cc -shared
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -O3
SHAREDLIB = libz.so
SHAREDLIBM = libz.so.1
SHAREDLIBV = libz.so.1.2.8
STATICLIB = libz.a
TEST = all teststatic testshared
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /Users/tjcorona/Development/Software/Albany/install
sharedlibdir = ${libdir}
uname = Darwin 15.6.0
--------------------


--------------------
./configure --help
Mon Nov 14 09:57:09 EST 2016
usage:
  configure [--const] [--zprefix] [--prefix=PREFIX]  [--eprefix=EXPREFIX]
    [--static] [--64] [--libdir=LIBDIR] [--sharedlibdir=LIBDIR]
    [--includedir=INCLUDEDIR] [--archs="-arch i386 -arch x86_64"]
